# gst-plugins-bad

./: .gitignore  .indentignore  Android.mk  ChangeLog  LICENSE  Makefile.am  NEWS  RELEASE  REQUIREMENTS  autogen.sh  configure.ac  gst-plugins-bad.doap  gst-plugins.spec.in  meson.build  meson_options.txt
docs/plugins/: Makefile.am  gst-plugins-bad-plugins-docs.sgml  gst-plugins-bad-plugins-sections.txt
examples/: Makefile.am
examples/negotiation/: Makefile.am  colorspace.c  queue.c
examples/seeking/: cdplayer.c  playbin.c  seek.c  spider_seek.c  vorbisfile.c
ext/: Makefile.am  meson.build
ext/arts/: Makefile.am  gst_arts.c
ext/artsd/: gstartsdsink.c
ext/assrender/: gstassrender.c  gstassrender.h
ext/audiofile/: gstafparse.c  gstafsink.c  gstafsrc.c
ext/cdaudio/: gstcdaudio.c
ext/dash/: gstmpdparser.c
ext/directfb/: dfbvideosink.c  directfbvideosink.c
ext/dtls/: gstdtlssrtpdec.c  gstdtlssrtpenc.c
ext/dts/: gstdtsdec.c
ext/eglgles/: Makefile.am  gstegladaptation.c  gstegladaptation.h  gstegladaptation_eagl.m  gstegladaptation_egl.c  gstegladaptation_ios.m  gstegladaptation_pc.c  gsteglglessink.c  gsteglglessink.h  video_platform_wrapper.c
ext/faac/: Makefile.am  gstfaac.c  gstfaac.h
ext/faad/: gstfaad.c
ext/gl/: gstglimagesink.c
ext/gsm/: gstgsmdec.c  gstgsmenc.c
ext/hermes/: gstcolorspace.c  gstcolorspace.h  gsthermescolorspace.c  yuv2rgb.c  yuv2rgb.h
ext/hls/: gsthlsdemux.c  gsthlsdemux.h
ext/ivorbis/: vorbis.c
ext/jack/: gstjack.c
ext/ladspa/: gstladspa.c  gstladspa.h
ext/libfame/: gstlibfame.c
ext/libmms/: gstmms.c
ext/mas/: massink.c
ext/modplug/: gstmodplug.cc
ext/mpegtscrypt/: crypt.c  crypt.h  gstmpegtscrypt.c  gstmpegtscrypt.h  meson.build
ext/mplex/: gstmplex.cc
ext/musepack/: gstmusepackdec.c  gstmusepackdec.h  gstmusepackreader.c  gstmusepackreader.h
ext/musicbrainz/: Makefile.am  blank-file.cpp  gsttrm.c
ext/nas/: nassink.c  nassink.h
ext/opencv/: Makefile.am  gstgpudewarp.cpp  gstgpudewarp.h  gstopencv.cpp  meson.build
ext/openjpeg/: gstopenjpegdec.c
ext/opus/: gstopusdec.c  gstopusdec.h  gstopusenc.c  gstopusheader.c  gstopusparse.c  gstrtpopuspay.c
ext/polyp/: polypsink.c
ext/qroverlay/: gstbaseqroverlay.c  gstqroverlay.c
ext/resindvd/: Makefile.am  resindvdsrc.c
ext/rsvg/: gstrsvg.c  gstrsvgdec.c  gstrsvgdec.h  gstrsvgoverlay.c
ext/rtmp/: gstrtmpsrc.c
ext/schroedinger/: Makefile.am  gstschrodec.c  gstschroenc.c
ext/sdl/: sdlvideosink.c  sdlvideosink.h
ext/shout/: gstshout.h
ext/smoothwave/: gstsmoothwave.c
ext/snapshot/: gstsnapshot.c
ext/sndfile/: gstsf.c
ext/soundtouch/: gstbpmdetect.cc  gstpitch.cc
ext/swfdec/: gstswfdec.c  gstswfdec.h
ext/teletextdec/: gstteletextdec.c
ext/timidity/: gsttimidity.c
ext/voaacenc/: gstvoaacenc.c
ext/vp8/: Makefile.am  gstvp8dec.c  gstvp8enc.c
ext/wayland/: gstwaylandsink.c  gstwaylandsink.h
ext/webrtc/: Makefile.am  fwd.h  gstwebrtcbin.c  gstwebrtcbin.h  gstwebrtcbin_private.h  gstwebrtcice.c  gstwebrtcice.h  icestream.c  icestream.h  meson.build  nicetransport.c  nicetransport.h  transportreceivebin.c  transportreceivebin.h  transportsendbin.c  transportsendbin.h  transportstream.c  transportstream.h  utils.c  utils.h
ext/xine/: xineaudiodec.c  xineaudiosink.c  xineinput.c
ext/xvid/: gstxvid.c  gstxviddec.c  gstxvidenc.c
gconf/: gstreamer.schemas  gstreamer.schemas.in
gst-libs/gst/: Makefile.am  meson.build
gst/apetag/: apedemux.c
gst/audiovisualizers/: gstspectrascope.c
gst/camerabin2/: gstcamerabin2.c  gstwrappercamerabinsrc.c
gst/cdxaparse/: gstcdxaparse.c  gstcdxastrip.c
gst/chart/: gstchart.c
gst/colorspace/: colorspace.c  yuv2rgb.c
gst/compositor/: compositor.c
gst/deinterlace/: gstdeinterlace.c
gst/dvbsuboverlay/: dvb-sub.c  gstdvbsuboverlay.c  gstdvbsuboverlay.h
gst/dvdspu/: gstdvdspu-render.c  gstdvdspu.c  gstdvdspu.h  gstspu-pgs.c  gstspu-vobsub-render.c
gst/festival/: gstfestival.c
gst/fieldanalysis/: Makefile.am
gst/filter/: gstbpwsinc.c  gstfilter.c  gstiir.c  gstlpwsinc.c
gst/flx/: gstflxdec.c
gst/freeze/: FAQ  Makefile.am  gstfreeze.c  gstfreeze.h
gst/frei0r/: gstfrei0r.c
gst/games/: gstvideoimage.c  gstvideoimage.h
gst/hls/: gstfragment.c  gstfragment.h  gstfragmentedplugin.c  gsthlsdemux.c  gsthlsdemux.h  gsthlssink.c  gsthlssink.h  gsturidownloader.c
gst/inter/: gstinteraudiosink.c  gstinteraudiosrc.c
gst/interlace/: gstinterlace.c
gst/jpegformat/: gstjpegparse.c
gst/librfb/: Makefile.am  gstrfbsrc.c  rfb.h  rfbbuffer.c  rfbbuffer.h  rfbbytestream.c  rfbbytestream.h  rfbdecoder.c  rfbdecoder.h
gst/mixmatrix/: mixmatrix.c
gst/modplug/: gstmodplug.cc  gstmodplug.h
gst/mpeg1sys/: buffer.c  gstmpeg1systemencode.c
gst/mpeg1videoparse/: gstmp1videoparse.c  gstmp1videoparse.h
gst/mpeg2sub/: gstmpeg2subt.c
gst/mpegaudioparse/: gstmp3types.c  gstmpegaudioparse.c
gst/mpegdemux/: gstmpegdemux.c  gstmpegdesc.h  gstmpegtsdemux.c  mpegtspacketizer.c
gst/mpegtsdemux/: mpegtsbase.c  mpegtspacketizer.c  mpegtspacketizer.h  mpegtsparse.c  tsdemux.c  tsdemux.h
m4/: gst-sid.m4
pkgconfig/: .gitignore  Makefile.am  gstreamer-gconf-uninstalled.pc.in  gstreamer-libs-uninstalled.pc.in  gstreamer-play-uninstalled.pc.in  gstreamer-play.pc.in  meson.build
po/: LINGUAS  POTFILES.in  af.po  az.po  cs.po  en_GB.po  fr.po  hu.po  it.po  nb.po  nl.po  or.po  pt_BR.po  sq.po  sr.po  sv.po  tr.po  uk.po  vi.po  zh_TW.po
sys/: Makefile.am  meson.build
sys/amfcodec/: AMF_codec_plugin.cpp  amf-trace-writer.cpp  amfcodecplugin.cpp  amftracewriter.cpp  amftracewriter.hpp  gst-amf.cpp  gst-amf.hpp  gstamf.cpp  gstamf.hpp  gstamfcontext.cpp  gstamfcontext.hpp  gstamfencoder.cpp  gstamfencoder.h  gstamfh264enc.cpp  gstamfh264enc.h  gstamfh265enc.cpp  gstamfh265enc.h  meson.build
sys/androidmedia/: Makefile.am  gstamc.c  gstamcvideodec.c
sys/nvdec/: Makefile.am  gstnvh264dec.c  gstnvh264dec.h  gstnvh264plugin.c  meson.build
sys/uvch264/: Makefile.am  gstuvch264.c  gstuvch264_mjpgdemux.c  gstuvch264_mjpgdemux.h  gstuvch264_src.c  gstuvch264_src.h  uvc_h264.c  uvc_h264.h
(+191 files in other folders)
